[gd_scene load_steps=9 format=3 uid="uid://b74csm0kdko4a"]

[ext_resource type="Script" path="res://src/scenes/player/player.gd" id="1_kw1vg"]
[ext_resource type="Texture2D" uid="uid://cvanx1etquv83" path="res://assets/player/robot_demo.png" id="1_pqllh"]
[ext_resource type="PackedScene" uid="uid://ba77kgop2fdgi" path="res://src/scenes/player/dash_trail_sprite.tscn" id="2_8kwlp"]
[ext_resource type="PackedScene" uid="uid://b5sd73yadu1wj" path="res://src/utils/cooldowns.tscn" id="3_4k5eq"]
[ext_resource type="Texture2D" uid="uid://bmniq7827svrg" path="res://assets/player/coin.png" id="4_evvp3"]
[ext_resource type="PackedScene" uid="uid://dsltkjgcvxtv6" path="res://src/scenes/player/grapple/grapple.tscn" id="5_y580y"]
[ext_resource type="PackedScene" uid="uid://daoq27b6vlwuy" path="res://src/scenes/menus/pause_menu.tscn" id="7_7v8lf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mqu2"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_kw1vg")
dash_trail_sprite = ExtResource("2_8kwlp")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_pqllh")
hframes = 16
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3mqu2")

[node name="Cooldowns" parent="." instance=ExtResource("3_4k5eq")]

[node name="DebugCast" type="RayCast2D" parent="."]
target_position = Vector2(-20, 0)

[node name="FloorDetector" type="RayCast2D" parent="."]
target_position = Vector2(0, 17)
collision_mask = 2

[node name="RightWallDetector" type="RayCast2D" parent="."]
target_position = Vector2(20, 0)
collision_mask = 2

[node name="LeftWallDetector" type="RayCast2D" parent="."]
target_position = Vector2(-20, 0)
collision_mask = 2

[node name="DebugDot" type="Sprite2D" parent="."]
position = Vector2(0, 11)
texture = ExtResource("4_evvp3")
hframes = 4

[node name="grapple_hook" parent="." instance=ExtResource("5_y580y")]

[node name="PauseMenu" parent="." instance=ExtResource("7_7v8lf")]
visible = false

[connection signal="grapple_attached" from="grapple_hook" to="." method="_on_grapple_hook_grapple_attached"]
[connection signal="grapple_detached" from="grapple_hook" to="." method="_on_grapple_hook_grapple_detached"]
